dnl * 
dnl * ------------------------------------------------------------------
dnl * configure.in - Configure script
dnl * Created by Robert Heller on Sat Aug  5 05:52:33 2006
dnl * ------------------------------------------------------------------
dnl * Modification History: $Log$
dnl * Modification History: Revision 1.44  2007/11/30 14:13:13  heller
dnl * Modification History: 11-30-2007 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.43  2007/11/30 13:56:35  heller
dnl * Modification History: Novemeber 30, 2007 lockdown.
dnl * Modification History:
dnl * Modification History: Revision 1.42  2007/11/03 20:26:54  heller
dnl * Modification History: Release 2.1.11
dnl * Modification History:
dnl * Modification History: Revision 1.41  2007/10/22 17:17:26  heller
dnl * Modification History: 10222007
dnl * Modification History:
dnl * Modification History: Revision 1.40  2007/09/30 15:49:28  heller
dnl * Modification History: Rev 2.1.10 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.39  2007/09/03 14:39:28  heller
dnl * Modification History: Rev 2.1.9 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.38  2007/05/06 12:49:38  heller
dnl * Modification History: Lock down  for 2.1.8 release candidate 1
dnl * Modification History:
dnl * Modification History: Revision 1.37  2007/04/19 17:23:20  heller
dnl * Modification History: April 19 Lock Down
dnl * Modification History:
dnl * Modification History: Revision 1.36  2007/02/21 20:48:37  heller
dnl * Modification History: SWIG Hackery
dnl * Modification History:
dnl * Modification History: Revision 1.35  2007/02/21 20:08:55  heller
dnl * Modification History: SWIG Hackery
dnl * Modification History:
dnl * Modification History: Revision 1.31  2007/02/01 20:38:25  heller
dnl * Modification History: Lock down for Release 2.1.7
dnl * Modification History:
dnl * Modification History: Revision 1.29  2007/01/08 23:19:21  heller
dnl * Modification History: Win32 build
dnl * Modification History:
dnl * Modification History: Revision 1.27  2007/01/08 20:11:32  heller
dnl * Modification History: Cross Compile Hacks
dnl * Modification History:
dnl * Modification History: Revision 1.26  2007/01/08 19:05:53  heller
dnl * Modification History: Jan 8, 2007 Lockdown
dnl * Modification History:
dnl * Modification History: Revision 1.1  2002/07/28 14:03:50  heller
dnl * Modification History: Add it copyright notice headers
dnl * Modification History:
dnl * ------------------------------------------------------------------
dnl * Contents:
dnl * ------------------------------------------------------------------
dnl *  
dnl *     Model RR System, Version 2
dnl *     Copyright (C) 1994,1995,2002-2005  Robert Heller D/B/A Deepwoods Software
dnl * 			51 Locke Hill Road
dnl * 			Wendell, MA 01379-9728
dnl * 
dnl *     This program is free software; you can redistribute it and/or modify
dnl *     it under the terms of the GNU General Public License as published by
dnl *     the Free Software Foundation; either version 2 of the License, or
dnl *     (at your option) any later version.
dnl * 
dnl *     This program is distributed in the hope that it will be useful,
dnl *     but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl *     GNU General Public License for more details.
dnl * 
dnl *     You should have received a copy of the GNU General Public License
dnl *     along with this program; if not, write to the Free Software
dnl *     Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
dnl * 
dnl *  
dnl * 

AC_INIT()

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_SUBST(build)
AC_CANONICAL_TARGET
AC_SUBST(target)

dnl Force cross_compiling, even if it *looks* like we can run cross-built 
dnl binaries (get around wine's cleverness).
if test ${cross_compiling} = "maybe"; then
  if test ${target_os} != ${build_os}; then
    cross_compiling=yes
  fi
fi  


MRR_VERSION=2.1
AC_DEFINE_UNQUOTED([MRR_VERSION],$MRR_VERSION,[MRR Version])
MRR_MAJOR_VERSION=2
AC_DEFINE_UNQUOTED([MRR_MAJOR_VERSION],$MRR_MAJOR_VERSION,[MRR Major])
MRR_MINOR_VERSION=1
AC_DEFINE_UNQUOTED([MRR_MINOR_VERSION],$MRR_MINOR_VERSION,[MRR Minor])
MRR_PATCH_LEVEL="2.1.22"
AC_DEFINE_UNQUOTED([MRR_PATCH_LEVEL],$MRR_PATCH_LEVEL,[MRR Patch Level])
MRR_PATCH_LEVELLIB=2.1.22
AC_SUBST(MRR_PATCH_LEVELLIB)
AC_SUBST(MRR_PATCH_LEVEL)
AC_SUBST(MRR_VERSION)
AC_SUBST(MRR_MAJOR_VERSION)
AC_SUBST(MRR_MINOR_VERSION)
AM_INIT_AUTOMAKE(MRRSystem, $MRR_PATCH_LEVELLIB )

AC_DEFINE([CMRI_VERSION],["1.0.0"],[CMRI Version])
CMRI_VERSIONLIB=1.0.0
AC_SUBST(CMRI_VERSIONLIB)
AC_DEFINE([XPRESSNET_VERSION],["1.0.0"],[XPressNet Version])
XPRESSNET_VERSIONLIB=1.0.0
AC_SUBST(XPRESSNET_VERSIONLIB)
AC_DEFINE([FCFCLASSES_VERSION],["1.0.4"],[FCF Classes Version])
FCFCLASSES_VERSIONLIB=1.0.4
AC_SUBST(FCFCLASSES_VERSIONLIB)
AC_DEFINE([TTCLASSES_VERSION],["1.0.2"],[TT Classes Version])
TTCLASSES_VERSIONLIB=1.0.2
AC_SUBST(TTCLASSES_VERSIONLIB)



if test "x${prefix}" = "xNONE"; then
    prefix=/usr/local
fi
if test "x${exec_prefix}" = "xNONE"; then
    exec_prefix="${prefix}"
fi

BUILD_DIR=`pwd`
TOP_DIR=${BUILD_DIR}

AC_SUBST(TOP_DIR)
AC_SUBST(BUILD_DIR)

srcdir=`dirname $0`
cd $srcdir
SRC_DIR=`pwd`
cd $BUILD_DIR

AC_SUBST(SRC_DIR)

AC_SUBST(target)

dnl Checks for programs.

AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CC
dnl if test ${cross_compiling} = "no"; then
dnl   AM_DISABLE_STATIC
dnl fi
AC_LIBTOOL_DLOPEN
if test ${cross_compiling} = "yes"; then
  lt_cv_deplibs_check_method='pass_all'
fi
AM_PROG_LIBTOOL
AC_PATH_PROG(PDFLATEX,pdflatex,/bin/true)
AC_PATH_PROGS(HTLATEX,[htlatex htlatex.sh],/bin/true)
AC_PATH_PROG(LATEX,latex,/bin/true)
AC_PATH_PROG(MAKEINDEX,makeindex,/bin/true)
AC_PATH_PROG(BIBTEX,bibtex,/bin/true)
AC_PATH_PROG(DVIPS,dvips,/bin/true)
AC_PATH_PROG(PS2PDF,ps2pdf,/bin/true)
AC_PATH_PROG(DOCXX,doc++,/bin/true)
AC_PATH_PROG(SWIG,swig,/bin/true)
AC_MSG_CHECKING([Checking Swig version])
  $SWIG -version >/dev/null 2> /tmp/swig_version$pid
  SWIGVERSION=`cat /tmp/swig_version$pid | grep Version | awk '{print $3}'`
  rm /tmp/swig_version$pid
  AC_SUBST(SWIGVERSION)
  AC_MSG_RESULT([SWIG Version is $SWIGVERSION])
  SWIGVERSIONMAJOR=`echo $SWIGVERSION|awk -F. '{print $1}'`
  AC_SUBST(SWIGVERSIONMAJOR)
  AC_MSG_RESULT([SWIG Major version is $SWIGVERSIONMAJOR])
  SWIGVERSIONMINOR=`echo $SWIGVERSION|awk -F. '{print $2}'`
  AC_SUBST(SWIGVERSIONMINOR)
  AC_MSG_RESULT([SWIG Minor version is $SWIGVERSIONMINOR])
  if test ${SWIGVERSIONMINOR} == 1 && test ${SWIGVERSIONMAJOR} == 1; then
    AC_MSG_ERROR([Your version of SWIG is old, you need to upgrade to 1.3!])
  else
    SWIGVERSIONFLAGS="-DSWIGVERSION=\$(SWIGVERSION) -DSWIGVERSIONMAJOR=\$(SWIGVERSIONMAJOR) \
-DSWIGVERSIONMINOR=\$(SWIGVERSIONMINOR)"
  fi
  AC_SUBST(SWIGVERSIONFLAGS)
AC_PATH_PROG(BISONXX,bison++,/bin/true)

AM_CONDITIONAL(DONT_HAVE_BISONXX,test $BISONXX = /bin/true)
dnl Checks for libraries.

AC_CHECK_LIB(usb,usb_init, [USBLIBS="-lusb"], [USBLIBS=""])
AC_SUBST(USBLIBS)
AC_CHECK_HEADERS(usb.h,[USBDEFS="-DHAVE_USB_H=1"],[USBDEFS=""])
AC_SUBST(USBDEFS)

AM_CONDITIONAL(DONT_HAVE_USB,test x$USBDEFS = "x")
AM_CONDITIONAL(CROSSCOMPILING,test ${cross_compiling} = "yes")
if test ${cross_compiling} = "yes"; then
  LIB_MRR_PATCH_LEVELLIB=`echo $MRR_PATCH_LEVELLIB|sed 's/\./-/g'`
  CMRI_LIB_VERSIONLIB=`echo $CMRI_VERSIONLIB|sed 's/\./-/g'`
  XPRESSNET_LIB_VERSIONLIB=`echo $XPRESSNET_VERSIONLIB|sed 's/\./-/g'`
  FCFCLASSES_LIB_VERSIONLIB=`echo $FCFCLASSES_VERSIONLIB|sed 's/\./-/g'`
  TTCLASSES_LIB_VERSIONLIB=`echo $TTCLASSES_VERSIONLIB|sed 's/\./-/g'`
else
  LIB_MRR_PATCH_LEVELLIB=$MRR_PATCH_LEVELLIB
  CMRI_LIB_VERSIONLIB=$CMRI_VERSIONLIB
  XPRESSNET_LIB_VERSIONLIB=$XPRESSNET_VERSIONLIB
  FCFCLASSES_LIB_VERSIONLIB=$FCFCLASSES_VERSIONLIB
  TTCLASSES_LIB_VERSIONLIB=$TTCLASSES_VERSIONLIB
fi
AC_SUBST(LIB_MRR_PATCH_LEVELLIB)
AC_SUBST(CMRI_LIB_VERSIONLIB)
AC_SUBST(XPRESSNET_LIB_VERSIONLIB)
AC_SUBST(FCFCLASSES_LIB_VERSIONLIB)
AC_SUBST(TTCLASSES_LIB_VERSIONLIB)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/select.h)

AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([bool])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE(,[bool x,y;
x = true;
y = false;],[AC_DEFINE([HAVE_BOOL],[1],[Has bool])
	     AC_MSG_RESULT(yes)],AC_MSG_RESULT(no))
AC_LANG_RESTORE

AC_MSG_CHECKING([stdc++])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
savedLibs=$LIBS
LIBS=-lstdc++
AC_TRY_LINK([
#include <iostream.h>
],[
	cout << endl;
],[STDCXXLIBS="-lstdc++"
  AC_MSG_RESULT(yes)],[STDCXXLIBS=""
  AC_MSG_RESULT(no)])
AC_SUBST(STDCXXLIBS)
LIBS=$savedLibs
AC_LANG_RESTORE


dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
if test ${cross_compiling} = "no"; then
  AC_CHECK_LIB(m,cos)
fi
AC_CHECK_FUNCS(gethostname gettimeofday regcomp select socket)
AC_CHECK_FUNCS(strerror strstr cos sin socketpair)
AC_REPLACE_FUNCS(mkstemp localtime_r asctime_r)

AC_MSG_CHECKING(tcl build dir)
dnl AC_MSG_NOTICE([cross_compiling = ${cross_compiling}])
if test ${cross_compiling} = "yes"; then
  dnl AC_MSG_NOTICE([cross_compiling -- finding cross tcl: CC is $CC])
  gccbin=`which $CC`
  gccbindir=`dirname $gccbin`
  crossdir=`dirname $gccbindir`
  crossexec_prefix=$crossdir/${target_cpu}-${target_os}
  TCL_LIB_DIR=$crossexec_prefix/lib
else
  TCL_LIB_DIR=$exec_prefix/lib
  dirs="${BUILD_DIR}/../tcl8.3a*/unix \
	${BUILD_DIR}/../tcl8.3b*/unix \
	${BUILD_DIR}/../tcl8.4.*/unix \
	${BUILD_DIR}/../tcl8.5.*/unix \
	/usr/share /usr/lib"
  for i in $dirs ; do
    if test -d "$i" -a -f "$i/tclConfig.sh"; then
	TCL_LIB_DIR=`cd $i; pwd`
    fi
  done
fi
dnl AC_MSG_NOTICE([TCL_LIB_DIR initialized as $TCL_LIB_DIR])
AC_ARG_WITH(tcl, [  --with-tcl=DIR          use Tcl binaries from DIR], TCL_LIB_DIR=$withval,)
if test -d $TCL_LIB_DIR; then
    AC_MSG_RESULT([using tcl library in $TCL_LIB_DIR])
else
    AC_MSG_ERROR(Tcl directory $TCL_LIB_DIR doesn't exist)
fi

cd ${TCL_LIB_DIR}/..
TCL_TOP_DIR=`pwd`
cd ${BUILD_DIR}

#--------------------------------------------------------------------

file=$TCL_LIB_DIR/tclConfig.sh
. $file
SHLIB_CFLAGS=`echo "$TCL_SHLIB_CFLAGS" |sed -e "s|PIC|pic|" -e "s|+Z|+z|"`
SHLIB_LD=`echo $TCL_SHLIB_LD|sed "s/-Wl,-soname,libtcl.so.0//g"`
SHLIB_SUFFIX=$TCL_SHLIB_SUFFIX
DL_LIBS=$TCL_DL_LIBS
LD_FLAGS=$TCL_LD_FLAGS

TCL_BASE=`echo ${TCL_LIB_SPEC} |sed -e "s|^.*-l||"`
TCL_STUB_BASE=`echo ${TCL_STUB_LIB_SPEC} |sed -e "s|^.*-l||"`

AC_SUBST(TCL_LIB_DIR)
if test -f ${TCL_LIB_DIR}/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_LIB_DIR}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh${TCL_VERSION}; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
elif test -f ${TCL_EXEC_PREFIX}/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}
elif test -f ${TCL_EXEC_PREFIX}/bin/tclsh; then
    TCL_BIN_DIR=${TCL_EXEC_PREFIX}/bin
else
    TCL_BIN_DIR=$exec_prefix/bin
fi
AC_SUBST(TCL_BIN_DIR)
if test -f ${TCL_BIN_DIR}/tclsh${TCL_VERSION}; then
    TCLSH=${TCL_BIN_DIR}/tclsh${TCL_VERSION}
else
    TCLSH=${TCL_BIN_DIR}/tclsh
fi
AC_SUBST(TCLSH)
if test -f ${TCL_BIN_DIR}/wish${TCL_VERSION}; then
    WISH=${TCL_BIN_DIR}/wish${TCL_VERSION}
else
    WISH=${TCL_BIN_DIR}/wish
fi
AC_SUBST(WISH)
if test -d ${TCL_TOP_DIR}/generic -a -f ${TCL_TOP_DIR}/generic/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/generic
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_TOP_DIR}/include -a -f ${TCL_TOP_DIR}/include/tcl.h; then
    TCL_INC_DIR=${TCL_TOP_DIR}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
elif test -d ${TCL_EXEC_PREFIX}/include -a -f ${TCL_EXEC_PREFIX}/include/tcl.h; then
    TCL_INC_DIR=${TCL_EXEC_PREFIX}/include
else
    TCL_INC_DIR=$prefix/include
fi
AC_SUBST(TCL_INC_DIR)
if test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION} -a -f ${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_TOP_DIR}/library -a -f ${TCL_TOP_DIR}/library/init.tcl; then
    TCL_LIBRARY=${TCL_TOP_DIR}/library
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
elif test -d ${TCL_PREFIX}/lib/tcl${TCL_VERSION} -a -f ${TCL_PREFIX}/lib/tcl${TCL_VERSION}/init.tcl; then
    TCL_LIBRARY=${TCL_PREFIX}/lib/tcl${TCL_VERSION}
else
    TCL_LIBRARY=$prefix/lib/tcl${TCL_VERSION}
fi
AC_SUBST(TCL_LIBRARY)

TCL_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_BASE}"
TCL_STUB_LIB_SPEC="-L${TCL_LIB_DIR} -l${TCL_STUB_BASE}"
eval "TCL_UNSHARED_LIB_FILE=lib${TCL_BASE}${TCL_UNSHARED_LIB_SUFFIX}"
eval "TCL_SHARED_LIB_FILE=lib${TCL_BASE}${TCL_SHARED_LIB_SUFFIX}"

#--------------------------------------------------------------------
LIB_INSTALL_DIR="${LIB_RUNTIME_DIR}"
#--------------------------------------------------------------------
#	The statements below define a collection of symbols related to
#	building libimg as a shared library instead of a static library.
#--------------------------------------------------------------------

TCL_SHARED_LIBS=""
#--------------------------------------------------------------------
AC_ARG_ENABLE(stubs, [  --disable-stubs         disable stub support for Img],
    [img_ok=$enableval], [img_ok=yes])
if test "$img_ok" != "no"; then
    TCL_DEFS="$TCL_DEFS -DUSE_TCL_STUBS"
    TCL_SHARED_LIBS="${TCL_STUB_LIB_SPEC}"
else
    case "$SHLIB_LD" in
	*ldAix*)
	TCL_SHARED_LIBS='${TCL_LIB_SPEC}'
	;;
    esac
fi

case "$SHLIB_LD" in
    *ldAix*)
    TCL_SHARED_LIBS="${TCL_SHARED_LIBS}"
    ;;
esac

if test ${cross_compiling} = "no"; then
  HOSTTCLSH=${TCLSH}
else
  AC_PATH_PROGS(HOSTTCLSH,[tclsh8.4 tclsh])
fi

AC_MSG_CHECKING(bwidget dir)
BWLIB=`echo 'puts $tcl_library'|${HOSTTCLSH}`
dirs="${TCL_PREFIX}/lib/bwidget* ${TCL_PREFIX}/lib/tcllib*/bwidget* ${BWLIB}/bwidget* ${BWLIB}/../tcllib*/bwidget* ${BWLIB}/../bwidget* ${BWLIB}/tcllib*/bwidget*"
for i in $dirs ; do
  if test -d "$i" -a -f "$i/pkgIndex.tcl"; then
    BWLIB=`cd $i; pwd`
  fi
done
AC_ARG_WITH(bwlib, [  --with-bwlib=DIR          use BWidget from DIR], BWLIB=$withval,)
if test -d $BWLIB; then
   AC_MSG_RESULT([using BWidget library in $BWLIB])
else
   AC_MSG_ERROR(BWidget library directory $BWLIB doesn't exist)
fi
AC_SUBST(BWLIB)

AC_MSG_CHECKING(snit dir)
SNITLIB=`echo 'puts $tcl_library'|${HOSTTCLSH}`

dirs="${TCL_PREFIX}/lib/snit* ${TCL_PREFIX}/lib/tcllib*/snit* ${SNITLIB}/../tcllib*/snit* ${SNITLIB}/../snit* ${SNITLIB}/tcllib*/snit* ${SNITLIB}/snit*"
for i in $dirs ; do
  if test -d "$i" -a -f "$i/pkgIndex.tcl"; then
    SNITLIB=`cd $i; pwd`
  fi
done
AC_ARG_WITH(snitlib, [  --with-snitlib=DIR          use snit from DIR], SNITLIB=$withval,)
if test -d $SNITLIB; then
   AC_MSG_RESULT([using snit library in $SNITLIB])
else
   AC_MSG_ERROR(Snit library directory $SNITLIB doesn't exist)
fi
AC_SUBST(SNITLIB)

AC_PATH_PROGS(UNZIP,unzip)

AC_MSG_CHECKING([Checking target Img and tclkit])
case $target_os in 
  macos | darwin) 
    AC_SUBST(IMG_ZIP, Img-1.3-Mac-Universal.zip)
    AC_SUBST(TCLKITRUN, tclkit-darwin-univ-aqua)
    ;;
  linux-gnu)
    case $target_cpu in
      x86_64)
	AC_SUBST(IMG_ZIP, Img-1.3-Linux64.zip)
	AC_SUBST(TCLKITRUN, tclkit-linux-x86_64)
	;;
      i*86)
	AC_SUBST(IMG_ZIP, Img-1.3-Linux32.zip)
	AC_SUBST(TCLKITRUN, tclkit-linux-x86)
	;;
      *)
	AC_MSG_ERROR([Unsupported Linux arch: $target_cpu])
	;;
     esac
     ;;

   mingw32 | winnt | windows* | cygwin)
     AC_SUBST(IMG_ZIP, Img-1.3-win32.zip)
     AC_SUBST(TCLKITRUN, tclkit-win32.exe)
     AC_SUBST(EXEEXT, .exe)
     ;;
   *) 
     AC_MSG_ERROR([Unsupported Operating System: $target_os])
     ;;
esac
AC_MSG_RESULT([IMG_ZIP is $IMG_ZIP and TCLKITRUN is $TCLKITRUN])

AC_MSG_CHECKING([Checking build tclkit])
case $build_os in 
  macos | darwin) 
    AC_SUBST(TCLKITBSRC, tclkit-darwin-univ-aqua)
    AC_SUBST(BEXEEXT, )
    ;;
  linux-gnu)
    AC_SUBST(BEXEEXT, )
    case $build_cpu in
      x86_64)
	AC_SUBST(TCLKITBSRC, tclkit-linux-x86_64)
	;;
      i*86)
	AC_SUBST(TCLKITBSRC, tclkit-linux-x86)
	;;
      *)
	AC_MSG_ERROR([Unsupported Linux arch: $build_cpu])
	;;
     esac
     ;;

   mingw32 | winnt | windows* | cygwin)
     AC_SUBST(BEXEEXT, .exe)
     AC_SUBST(TCLKITBSRC, tclkit-win32.exe)
     ;;
   *) 
     AC_MSG_ERROR([Unsupported Operating System: $build_os])
     ;;
esac
AC_MSG_RESULT([TCLKITBSRC is $TCLKITBSRC])


dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/select.h)

AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(int)
AC_MSG_CHECKING([bool])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
AC_TRY_COMPILE(,[bool x,y;
x = true;
y = false;],[AC_DEFINE([HAVE_BOOL],[1],[Has bool])
	     AC_MSG_RESULT(yes)],AC_MSG_RESULT(no))
AC_LANG_RESTORE

AC_MSG_CHECKING([stdc++])
AC_LANG_SAVE
AC_LANG_CPLUSPLUS
savedLibs=$LIBS
LIBS=-lstdc++
AC_TRY_LINK([
#include <iostream.h>
],[
	cout << endl;
],[STDCXXLIBS="-lstdc++"
  AC_MSG_RESULT(yes)],[STDCXXLIBS=""
  AC_MSG_RESULT(no)])
AC_SUBST(STDCXXLIBS)
LIBS=$savedLibs
AC_LANG_RESTORE

AC_PATH_PROG(SED,sed)

# _BOOST_SED_CPP(SED-PROGRAM, PROGRAM,
#                [ACTION-IF-FOUND], [ACTION-IF-NOT-FOUND])
# --------------------------------------------------------
# Same as AC_EGREP_CPP, but leave the result in conftest.i.
# PATTERN is *not* overquoted, as in AC_EGREP_CPP.  It could be useful
# to turn this into a macro which extracts the value of any macro.
m4_define([_BOOST_SED_CPP],
[AC_LANG_PREPROC_REQUIRE()dnl
dnl AC_REQUIRE([AC_PROG_SED])dnl
AC_LANG_CONFTEST([AC_LANG_SOURCE([[$2]])])
AS_IF([dnl eval is necessary to expand ac_cpp.
dnl Ultrix and Pyramid sh refuse to redirect output of eval, so use subshell.
(eval "$ac_cpp conftest.$ac_ext") 2>&AS_MESSAGE_LOG_FD |
  $SED -n -e "$1" >conftest.i 2>&1],
  [$3],
  [$4])dnl
rm -f conftest*
])# AC_EGREP_CPP



# BOOST_REQUIRE([VERSION])
# ------------------------
# Look for Boost.  If version is given, it must either be a literal of the form
# "X.Y.Z" where X, Y and Z are integers (the ".Z" part being optional) or a
# variable "$var".
# Defines the value BOOST_CPPFLAGS.  This macro only checks for headers with
# the required version, it does not check for any of the Boost libraries.
# FIXME: Add a 2nd optional argument so that it's not fatal if Boost isn't found
# and add an AC_DEFINE to tell whether HAVE_BOOST.
AC_DEFUN([BOOST_REQUIRE],
[boost_save_IFS=$IFS
boost_version_req="$1"
IFS=.
set x $boost_version_req 0 0 0
IFS=$boost_save_IFS
shift
boost_version_req=`expr "$[1]" '*' 100000 + "$[2]" '*' 100 + "$[3]"`
AC_ARG_WITH([boost],
   [AS_HELP_STRING([--with-boost=DIR],
                   [prefix of Boost $1 @<:@guess@:>@])])dnl
AC_ARG_VAR([BOOST_ROOT],[Location of Boost installation])dnl
# If BOOST_ROOT is set and the user has not provided a value to
# --with-boost, then treat BOOST_ROOT as if it the user supplied it.
if test x"$BOOST_ROOT" != x; then
  if test x"$with_boost" = x; then
    AC_MSG_NOTICE([Detected BOOST_ROOT; continuing with --with-boost=$BOOST_ROOT])
    with_boost=$BOOST_ROOT
  else
    AC_MSG_NOTICE([Detected BOOST_ROOT=$BOOST_ROOT, but overridden by --with-boost=$with_boost])
  fi
fi
AC_SUBST([DISTCHECK_CONFIGURE_FLAGS],
         ["$DISTCHECK_CONFIGURE_FLAGS '--with-boost=$with_boost'"])
boost_save_CPPFLAGS=$CPPFLAGS
  AC_CACHE_CHECK([for Boost headers version >= $boost_version_req],
    [boost_cv_inc_path],
    [boost_cv_inc_path=no
AC_LANG_PUSH([C++])dnl
m4_pattern_allow([^BOOST_VERSION$])dnl
    AC_LANG_CONFTEST([AC_LANG_PROGRAM([[#include <boost/version.hpp>
#if !defined BOOST_VERSION
# error BOOST_VERSION is not defined
#elif BOOST_VERSION < $boost_version_req
# error Boost headers version < $boost_version_req
#endif
]])])
    # If the user provided a value to --with-boost, use it and only it.
    case $with_boost in #(
      ''|yes) set x '' /opt/local/include /usr/local/include /opt/include \
                 /usr/include C:/Boost/include;; #(
      *)      set x "$with_boost/include" "$with_boost";;
    esac
    shift
    for boost_dir
    do
    # Without --layout=system, Boost (or at least some versions) installs
    # itself in <prefix>/include/boost-<version>.  This inner loop helps to
    # find headers in such directories.
    # I didn't indent this loop on purpose (to avoid over-indented code)
    for boost_inc in "$boost_dir" "$boost_dir"/boost-*
    do
      test x"$boost_inc" != x && CPPFLAGS="$CPPFLAGS -I$boost_inc"
      AC_COMPILE_IFELSE([], [boost_cv_inc_path=yes], [boost_cv_version=no])
      if test x"$boost_cv_inc_path" = xyes; then
        if test x"$boost_inc" != x; then
          boost_cv_inc_path=$boost_inc
        fi
        break 2
      fi
    done
    done
AC_LANG_POP([C++])dnl
    ])
    case $boost_cv_inc_path in #(
      no)   AC_MSG_ERROR([cannot find Boost headers version >= $boost_version_req]);;#(
      yes)  BOOST_CPPFLAGS=;;#(
      *)    AC_SUBST([BOOST_CPPFLAGS], ["-I$boost_cv_inc_path"]);;
    esac
  AC_CACHE_CHECK([for Boost's header version],
    [boost_cv_lib_version],
    [m4_pattern_allow([^BOOST_LIB_VERSION$])dnl
     _BOOST_SED_CPP([/^boost-lib-version = /{s///;s/\"//g;p;g;}],
                    [#include <boost/version.hpp>
boost-lib-version = BOOST_LIB_VERSION],
    [boost_cv_lib_version=`cat conftest.i`])])
    # e.g. "134" for 1_34_1 or "135" for 1_35
    boost_major_version=`echo "$boost_cv_lib_version" | sed 's/_//;s/_.*//'`
    case $boost_major_version in #(
      '' | *[[^0-9]]*)
        AC_MSG_ERROR([Invalid value: boost_major_version=$boost_major_version])
        ;;
    esac
CPPFLAGS=$boost_save_CPPFLAGS
])# BOOST_REQUIRE


BOOST_REQUIRE

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL


dnl Substitutions...

AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(SHLIB_CFLAGS)
AC_SUBST(SHLIB_CXXFLAGS)
SHLIB_LD=`echo $SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(SHLIB_LD)
SHLIB_LD_LIBS=$TCL_SHLIB_LD_LIBS
AC_SUBST(SHLIB_LD_LIBS)
AC_SUBST(SHLIB_SUFFIX)
AC_SUBST(TCL_DBGX)
AC_SUBST(TCL_VERSION)
AC_SUBST(TCL_DEFS)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_STUB_LIB_SPEC)
AC_SUBST(TCL_STUB_LIB_PATH)
AC_SUBST(TCL_SHARED_LIBS)
AC_SUBST(TCL_SHARED_LIB_FILE)
AC_SUBST(TCL_UNSHARED_LIB_FILE)
AC_SUBST(TCL_SHLIB_CFLAGS)
AC_SUBST(TCL_SHLIB_SUFFIX)
TCL_SHLIB_LD=`echo $TCL_SHLIB_LD|sed -e "s/${TCL_CC}/${CXX}/g"`
AC_SUBST(TCL_SHLIB_LD)
AC_SUBST(TCL_PREFIX)
AC_SUBST(TCL_EXEC_PREFIX)
AC_SUBST(TCL_CFLAGS)
AC_SUBST(TCL_LIB_SPEC)
SYSTEMVERSION="$MRR_PATCH_LEVEL"
AC_SUBST(SYSTEMVERSION)



AC_OUTPUT(config_tcl.sed \
	  Makefile \
	  BuildScripts/Makefile \
	  BuildData/Makefile \
	  C++/Makefile \
		C++/RailDriver/Makefile \
		C++/ParserClasses/Makefile \
		C++/ParserClassesBoost/Makefile \
		C++/TTSupport/Makefile \
		C++/FCFSupport/Makefile \
		C++/CMri/Makefile \
		C++/XPressNet/Makefile \
	  Scripts/Makefile \
		Scripts/Common/Makefile \
		Scripts/GRSupport/Makefile \
		Scripts/Dispatcher/Makefile \
		Scripts/DispatcherBoost/Makefile \
		Scripts/CameraScripts/Makefile \
		Scripts/FreightCarForwarder/Makefile \
		Scripts/TimeTable/Makefile \
		Scripts/CalcScripts/Makefile \
		Scripts/FreightCarForwarder2/Makefile \
		Scripts/FreightCarForwarder2/NorthAmerican/Makefile \
		Scripts/TimeTable2/Makefile \
		Scripts/ControlSupport/Makefile \
		Scripts/MainProgram/Makefile \
	  Doc/Makefile \
		Doc/Support/Makefile \
		Doc/User/Makefile \
		Doc/Internals/Makefile \
		Doc/ProgrammingGuides/Makefile \
	  ManPages/Makefile \
		ManPages/C++API/Makefile \
		ManPages/TclAPI/Makefile \
		ManPages/Daemons/Makefile \
		ManPages/Programs/Makefile \
	  Installer/Makefile \
	  MRRSystem.spec
	  )


